<resources>
    <string name="app">OpenConnect +P</string>
    <string name="permission_description">Allow other apps to control this VPN client</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="more_options">More options</string>
    <string name="header_menu">Menu</string>
    <string name="header_add_profile">+ Add Profile</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="securid_info">SecurID info</string>
    <string name="about_openconnect">About OpenConnect +P</string>
    <string name="securid_none_defined">None of your VPN profiles have a SecurID token string set.\n\nTo add one, import an \"sdtid\" file or click on a \"http://127.0.0.1/securid\" URL from your email.  See the FAQ for more information.</string>
    <string name="securid_parse_error">Unable to parse the SecurID token string in this profile.</string>
    <string name="securid_internal_error">Unable to access the VPN profile.  Please file a bug report with the author.</string>
    <string name="securid_encrypted">This profile\'s SecurID token string is encrypted. Try re-importing it.</string>
    <string name="copy">Copy</string>
    <string name="next_tokencode">Next tokencode:</string>
    <string name="using_pin">Using PIN:</string>
    <string name="token_sn">Token S/N:</string>
    <string name="exp_date">Expiration date:</string>
    <string name="gmt">Current time (GMT):</string>
    <string name="dev_id">SecurID device ID:</string>
    <string name="enter_pin">Enter PIN:</string>
    <string name="new_pin">New PIN</string>
    <string name="skip">Skip</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="status">Status</string>
    <string name="log">Log</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_hostname_prompt">Enter the hostname, IP address, or URL:</string>
    <string name="hostname_examples">Valid formats include:\nvpn.example.com (typical usage)\nvpn.example.com:443 (host:port)\nhttps://vpn.example.com/my-group-url</string>
    <string name="disconnect">Disconnect</string>
    <string name="abort_switch">Abort switch</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_to">Reconnect to %1$s</string>
    <string name="clear_log">Clear log</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="clear">Clear</string>
    <string name="use_dtls">Use DTLS</string>
    <string name="use_dtls_summary">Off by default. Enable UDP (DTLS 1.2) for a faster tunnel when your network allows it.</string>
    <string name="compression_mode">Compression</string>
    <string name="disable_ipv6">Disable IPv6</string>
    <string name="disable_ipv6_summary">Do not request IPv6. IPv6 is also blocked on the tunnel so it cannot leak.</string>
    <string name="requested_mtu">Requested MTU</string>
    <string name="requested_mtu_message">Leave empty to use the server value. Typical range is 1200–1400 if large packets are dropped.</string>
    <string name="pass_tos">Pass TOS / DSCP</string>
    <string name="pass_tos_summary">Copy IP Type-of-Service bits through the tunnel</string>
    <string name="tunnel_crypto">Tunnel:</string>
    <string name="add_new_button">Add new connection</string>
    <string name="delete_profile">Delete profile</string>
    <string name="sni">Custom SNI</string>
    <string name="sni_hint">Enter value that should always be sent as TLS client SNI:</string>
    <string name="copied_entry">Copied to clipboard.</string>
    <string name="faq">FAQ</string>
    <string name="question_abbrev">Q:</string>
    <string name="answer_abbrev">A:</string>
    <string name="speed_waiting">Waiting for state message…</string>
    <string name="generalsettings">Settings</string>
    <string name="edit_profile_title">Editing \"%s\"</string>
    <string name="netchange_summary">Turning this option on will force a reconnect if the network state is changed (e.g. WiFi to/from mobile)</string>
    <string name="netchange">Reconnect on network change</string>
    <string name="netstatus">Network Status:</string>
    <string name="uptime">Uptime:</string>
    <string name="tx">TX:</string>
    <string name="rx">RX:</string>
    <string name="local_ip4">Tunnel IPv4:</string>
    <string name="local_ip6">Tunnel IPv6:</string>
    <string name="public_ip4">Public IPv4</string>
    <string name="public_ip6">Public IPv6</string>
    <string name="public_ip_looking">Detecting public IP…</string>
    <string name="disabled">disabled</string>
    <string name="subnet_mask">Subnet mask:</string>
    <string name="server_name">Server name:</string>
    <string name="advanced">Advanced</string>
    <string name="trace_log_summary">Increase logging verbosity for debugging purposes. This will affect performance.</string>
    <string name="trace_log">Enable TRACE logging</string>
    <string name="log_enabled">Enable connection log</string>
    <string name="log_enabled_summary">Off by default. Turn on only when you need to diagnose a problem.</string>
    <string name="log_level">Log level</string>
    <string name="log_level_err">Errors only</string>
    <string name="log_level_info">Info</string>
    <string name="log_level_debug">Debug</string>
    <string name="log_level_trace">Trace (very verbose)</string>
    <string name="lookup_public_ip">Show public IP</string>
    <string name="lookup_public_ip_summary">After connect, show the VPN exit IP, country, and flag. Uses a public lookup over the tunnel.</string>
    <string name="getproxy_error">Error getting proxy settings: %s</string>
    <string name="no_vpn_profiles_defined">No VPN profiles defined.</string>
    <string name="add_new_vpn_hint">Use the &lt;img src=\"ic_menu_add\"/&gt; icon to add a new VPN</string>
    <string name="faq_hint">Be sure to also check out the FAQ if you have not used OpenConnect +P before.</string>
    <string name="send_minidump">Crash dump sharing is disabled</string>
    <string name="send_minidump_summary">Dumps can contain server names and log data, so they are not sent anywhere.</string>
    <string name="notification_input_needed">User input needed</string>
    <string name="notification_touch_here">Touch here to jump to OpenConnect +P</string>
    <string name="state_connected_to">Connected to %1$s</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_invalid_hostname">Invalid hostname \'%1$s\'</string>
    <string name="error_cant_connect">Error connecting to host \'%1$s\'. See log for details.</string>
    <string name="oneway_bytecount">%1$s/s %2$s</string>
    <string name="statusline_bytecount">↓%2$s/s %1$s - ↑%4$s/s %3$s</string>
    <string name="login_title">%s login</string>
    <string name="add">Add</string>
    <string name="prompt">%1$s attempts to control %2$s</string>
    <string name="remote_warning">By proceeding, you are giving the application permission to completely control OpenConnect +P and to intercept all network traffic. <b> Do NOT accept unless you trust the application. </b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="remote_trust">I trust this application.</string>
    <string name="no_external_app_allowed">No app allowed to use external API</string>
    <string name="allowed_apps">Allowed apps: %s</string>
    <string name="clearappsdialog">Clear list of allowed external apps?\nCurrent list of allowed apps:\n\n%s</string>
    <string name="screenoff_summary">Pause the connection when the screen is off, to save battery life.</string>
    <string name="screenoff_title">Pause when asleep</string>
    <string name="save_password">Save Password</string>
    <string name="cannotparsecert">Cannot display certificate information</string>
    <string name="vpnbehaviour">VPN behavior</string>
    <string name="allow_vpn_changes">Allow changes to VPN Profiles</string>
    <string name="server">Server</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_label">Profile:</string>
    <string name="server_address">Server address</string>
    <string name="ca_certificate">CA certificate</string>
    <string name="authentication">Authentication</string>
    <string name="user_certificate">User certificate</string>
    <string name="private_key">Private key</string>
    <string name="software_token">Software token</string>
    <string name="token_string">Token string</string>
    <string name="clear_saved_passwords">Clear saved passwords</string>
    <string name="clear_saved_passwords_confirm">Are you sure you want to erase all stored credentials?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="batch_mode">Batch mode</string>
    <string name="custom_csd_wrapper">Custom CSD wrapper</string>
    <string name="split_tunnel_mode">Split tunnel mode</string>
    <string name="split_tunnel_networks">Split tunnel networks</string>
    <string name="split_tunnel_networks_message">Enter a comma-separated list of subnets to route over the VPN link.  Example:\n\n192.168.22.0/24, 10.15.0.0/16</string>
    <string name="timestamp_format">Log timestamp format</string>
    <string name="disable_username_caching">Disable credential caching</string>
    <string name="disable_username_caching_summary">Never cache login names, user groups, or passwords</string>
    <string name="use_shared_login">Use shared domain login</string>
    <string name="use_shared_login_unavailable">Only available for hostname-based servers (not IP addresses)</string>
    <string name="saved_logins_title">Saved domain logins</string>
    <string name="saved_logins_summary">Shared usernames and passwords per domain</string>
    <string name="disable_xml_post">Disable XML POST</string>
    <string name="disable_xml_post_summary">Use the old authentication handshake; may fail on newer servers</string>
    <string name="require_pfs">Require PFS</string>
    <string name="require_pfs_summary">Only negotiate cipher suites with Perfect Forward Secrecy.  If the server doesn\'t support PFS, the connection will fail.</string>
    <string name="dpd_override">Override DPD timeout</string>
    <string name="dpd_override_summary">Use a custom Dead Peer Detection timeout instead of the server default</string>
    <string name="dpd_value">DPD timeout</string>
    <string name="dpd_value_message">Enter the new timeout value, in seconds. Typical values range from 30 to 600.</string>
    <string name="per_app_global_title">Global per-app rules</string>
    <string name="per_app_global_mode">Global routing mode</string>
    <string name="per_app_select_apps">Select apps</string>
    <string name="per_app_select_apps_summary">Choose which apps are included or excluded</string>
    <string name="per_app_search">Search apps</string>
    <string name="per_app_show_system">Show system apps</string>
    <string name="per_app_source">Per-app policy</string>
    <string name="per_app_mode">Routing mode</string>
    <string name="per_app_reconnect_hint">Reconnect VPN after changing these settings</string>
    <string name="save">Save</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="widget_description">Tap to connect or disconnect OpenConnect +P</string>
    <string name="widget_connect">Connect</string>
    <string name="update_category">Updates</string>
    <string name="update_check_now">Check now</string>
    <string name="appearance_category">Appearance</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">System default, light, or dark</string>
</resources>