<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/server"
        android:key="pref_key_server">
        <EditTextPreference
            android:key="profile_name"
            android:title="@string/profile_name"
            android:inputType="text|textNoSuggestions|textCapSentences"
            android:defaultValue="" />
        <EditTextPreference
            android:key="server_address"
            android:title="@string/server_address"
            android:dialogMessage="@string/add_profile_hostname_prompt"
            android:inputType="textUri"
            android:defaultValue="" />
        <net.openconnect_vpn.android.ShowTextPreference
            android:key="ca_certificate"
            android:title="@string/ca_certificate"
            android:defaultValue="" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/authentication"
        android:key="pref_key_authentication">
        <net.openconnect_vpn.android.ShowTextPreference
            android:key="user_certificate"
            android:title="@string/user_certificate"
            android:defaultValue="" />
        <net.openconnect_vpn.android.ShowTextPreference
            android:key="private_key"
            android:title="@string/private_key"
            android:defaultValue="" />
        <ListPreference
            android:key="software_token"
            android:title="@string/software_token"
            android:dialogTitle="@string/software_token"
            android:entries="@array/software_token_entries"
            android:entryValues="@array/software_token_values"
            android:defaultValue="disabled" />
        <net.openconnect_vpn.android.ShowTextPreference
            android:key="token_string"
            android:title="@string/token_string"
            android:defaultValue="" />
        <CheckBoxPreference
            android:key="disable_username_caching"
            android:title="@string/disable_username_caching"
            android:summary="@string/disable_username_caching_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="use_shared_login"
            android:title="@string/use_shared_login"
            android:summary="@string/use_shared_login_unavailable"
            android:defaultValue="false" />
        <net.openconnect_vpn.android.ClearPasswordPreference
            android:key="clear_saved_passwords"
            android:title="@string/clear_saved_passwords"
            android:dialogTitle="@string/clear_saved_passwords"
            android:dialogMessage="@string/clear_saved_passwords_confirm"
            android:negativeButtonText="@string/no"
            android:positiveButtonText="@string/yes"
            android:defaultValue="" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/advanced"
        android:key="pref_key_advanced">
        <ListPreference
            android:key="batch_mode"
            android:title="@string/batch_mode"
            android:dialogTitle="@string/batch_mode"
            android:entries="@array/batch_mode_entries"
            android:entryValues="@array/batch_mode_values"
            android:defaultValue="empty_only" />
        <CheckBoxPreference
            android:key="use_dtls"
            android:title="@string/use_dtls"
            android:summary="@string/use_dtls_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="compression_mode"
            android:title="@string/compression_mode"
            android:dialogTitle="@string/compression_mode"
            android:entries="@array/compression_mode_entries"
            android:entryValues="@array/compression_mode_values"
            android:defaultValue="none" />
        <CheckBoxPreference
            android:key="disable_ipv6"
            android:title="@string/disable_ipv6"
            android:summary="@string/disable_ipv6_summary"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="requested_mtu"
            android:title="@string/requested_mtu"
            android:dialogMessage="@string/requested_mtu_message"
            android:inputType="number"
            android:defaultValue="" />
        <CheckBoxPreference
            android:key="pass_tos"
            android:title="@string/pass_tos"
            android:summary="@string/pass_tos_summary"
            android:defaultValue="false" />
        <net.openconnect_vpn.android.ShowTextPreference
            android:key="custom_csd_wrapper"
            android:title="@string/custom_csd_wrapper"
            android:defaultValue="" />
        <ListPreference
            android:key="split_tunnel_mode"
            android:title="@string/split_tunnel_mode"
            android:dialogTitle="@string/split_tunnel_mode"
            android:entries="@array/split_tunnel_mode_entries"
            android:entryValues="@array/split_tunnel_mode_values"
            android:defaultValue="auto" />
        <EditTextPreference
            android:key="split_tunnel_networks"
            android:title="@string/split_tunnel_networks"
            android:dialogMessage="@string/split_tunnel_networks_message"
            android:inputType="textUri|textMultiLine"
            android:defaultValue="" />
        <ListPreference
            android:key="per_app_source"
            android:title="@string/per_app_source"
            android:dialogTitle="@string/per_app_source"
            android:entries="@array/per_app_source_entries"
            android:entryValues="@array/per_app_source_values"
            android:defaultValue="global" />
        <ListPreference
            android:key="per_app_mode"
            android:title="@string/per_app_mode"
            android:dialogTitle="@string/per_app_mode"
            android:entries="@array/per_app_mode_entries"
            android:entryValues="@array/per_app_mode_values"
            android:defaultValue="all" />
        <Preference
            android:key="per_app_packages"
            android:persistent="false"
            android:title="@string/per_app_select_apps"
            android:summary="@string/per_app_select_apps_summary" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/sni_hint"
            android:key="sni"
            android:title="@string/sni" />
        <CheckBoxPreference
            android:key="disable_xml_post"
            android:title="@string/disable_xml_post"
            android:summary="@string/disable_xml_post_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="require_pfs"
            android:title="@string/require_pfs"
            android:summary="@string/require_pfs_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="dpd_override"
            android:title="@string/dpd_override"
            android:summary="@string/dpd_override_summary"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="dpd_value"
            android:title="@string/dpd_value"
            android:dependency="dpd_override"
            android:dialogMessage="@string/dpd_value_message"
            android:inputType="number"
            android:defaultValue="" />
    </PreferenceCategory>
    <Preference
        android:key="delete_profile"
        android:title="@string/delete_profile" />
</PreferenceScreen>
